--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,14 +3,14 @@ owner: upptime # Your GitHub organization or username, where this repository liv
 repo: upptime # The name of this repository
 
 sites:
-  - name: Google
-    url: https://www.google.com
-  - name: Wikipedia
-    url: https://en.wikipedia.org
-  - name: Hacker News
-    url: https://news.ycombinator.com
-  - name: Test Broken Site
-    url: https://thissitedoesnotexist.koj.co
+  - name: Nature Website
+    url: https://naturehotels.site
+  - name: Tovy
+    url: https://tovy.naturehotels.site
+  - name: N/A
+    url: N/A
+  - name: N/A
+    url: N/A
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -19,8 +19,8 @@ status-website:
   # baseUrl: /your-repo-name
   logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
   name: Nature Hotels & Resorts | Status
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  introTitle: "Nature Assistant"
+  introMessage: Welcome to the official Nature Hotels & Resorts status page, managed by Th_sisnotharry. This page will be used as a hub for informative updates on service outages, maintenances and other issues that may occur to our services.
   navbar:
     - title: Status
       href: /
