--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,10 +7,6 @@ sites:
     url: https://naturehotels.site
   - name: Tovy
     url: https://tovy.naturehotels.site
-  - name: N/A
-    url: N/A
-  - name: N/A
-    url: N/A
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -24,8 +20,8 @@ status-website:
   navbar:
     - title: Status
       href: /
-    - title: GitHub
-      href: https://github.com/$OWNER/$REPO
+    - title: Discord
+      href: https://discord.gg/TDzpySe
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
