--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites:
     url: https://naturehotels.site
   - name: Tovy
     url: https://tovy.naturehotels.site
+  - name: Google
+    url: https://google.co.uk
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
