--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -10,6 +10,9 @@ sites:
   - name: Google
     url: https://google.co.uk
 
+i18n:
+  footer: Test
+
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
   # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
@@ -24,9 +27,6 @@ status-website:
       href: /
     - title: Discord
       href: https://discord.gg/TDzpySe
-      
-   i18n:
-  footer: Copyright Nature 2022
 
 # Upptime also supports notifications, assigning issues, and more
 # See https://upptime.js.org/docs/configuration
