--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -3,12 +3,10 @@ owner: Thisisnotharry # Your GitHub organization or username, where this reposit
 repo: statuspage # The name of this repository
 
 sites:
-  - name: Nature Website
+  - name: Nature Site
     url: https://naturehotels.site
-  - name: Tovy
+  - name: Tovy (Activity Tracker)
     url: https://tovy.naturehotels.site
-  - name: Google
-    url: https://google.co.uk
 
 i18n:
   footer: Found an issue with any of our products? Report it to our SHR team.
