--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -7,6 +7,8 @@ sites:
     url: https://naturehotels.site
   - name: Tovy (Activity Tracker)
     url: https://tovy.naturehotels.site
+  - name: Discord
+    url: https://discord.com/app
 
 i18n:
   footer: Found an issue with any of our products? Report it to our SHR team.
